[gd_scene load_steps=15 format=3 uid="uid://vd2s5h16kcug"]

[ext_resource type="Script" path="res://scripts/fire.gd" id="1_yf8br"]
[ext_resource type="Texture2D" uid="uid://btime4elqlovj" path="res://assets/sprites/traps/fire/Hit (16x32).png" id="2_xmsdl"]
[ext_resource type="Texture2D" uid="uid://cst070boxgvge" path="res://assets/sprites/traps/fire/Off.png" id="3_tvqo2"]
[ext_resource type="Texture2D" uid="uid://46ev2r6ffc5q" path="res://assets/sprites/traps/fire/On (16x32).png" id="4_k4hv4"]
[ext_resource type="PackedScene" uid="uid://d3ts70ieor10" path="res://prefabs/entities/kill_zone.tscn" id="5_hc301"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xc4qo"]
atlas = ExtResource("2_xmsdl")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyy32"]
atlas = ExtResource("3_tvqo2")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8v2y"]
atlas = ExtResource("4_k4hv4")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgj1l"]
atlas = ExtResource("4_k4hv4")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glxj0"]
atlas = ExtResource("4_k4hv4")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2dgn2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc4qo")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyy32")
}],
"loop": false,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8v2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgj1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glxj0")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qgwu"]
size = Vector2(16, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oud5w"]
size = Vector2(16, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j45ag"]
size = Vector2(14, 14)

[node name="fire" type="AnimatableBody2D"]
disable_mode = 2
collision_mask = 3
script = ExtResource("1_yf8br")

[node name="fire_duration" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2dgn2")
animation = &"off"
autoplay = "off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_4qgwu")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_oud5w")

[node name="kill_zone" parent="." instance=ExtResource("5_hc301")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_zone"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_j45ag")
disabled = true

[connection signal="timeout" from="fire_duration" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
